[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Sprites/Menu/Fondo_Menu.png" type="Texture" id=1]
[ext_resource path="res://Scripts/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Scenes/ExitGame.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Sprites/Menu/opciones.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprites/Menu/salir.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprites/Menu/juevo nuevo.png" type="Texture" id=6]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 1920, 1080 )
texture = ExtResource( 1 )
expand = true
stretch_mode = 6

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer"]
margin_left = 725.0
margin_right = 1195.0
margin_bottom = 1080.0
rect_min_size = Vector2( 190, 1080 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2"]
margin_right = 470.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 600 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer2"]
margin_top = 604.0
margin_right = 470.0
margin_bottom = 940.0

[node name="NewGame" type="TextureButton" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_right = 470.0
margin_bottom = 90.0
texture_normal = ExtResource( 6 )

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 94.0
margin_right = 470.0
margin_bottom = 124.0
rect_min_size = Vector2( 0, 30 )

[node name="Opciones" type="TextureButton" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 128.0
margin_right = 470.0
margin_bottom = 218.0
rect_min_size = Vector2( 190, 45 )
texture_normal = ExtResource( 4 )

[node name="MarginContainer3" type="MarginContainer" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
margin_top = 222.0
margin_right = 470.0
margin_bottom = 252.0
rect_min_size = Vector2( 0, 30 )

[node name="ExitGame" type="TextureButton" parent="CenterContainer/VBoxContainer2/VBoxContainer"]
self_modulate = Color( 0, 1, 0.180392, 1 )
margin_top = 256.0
margin_right = 470.0
margin_bottom = 336.0
rect_min_size = Vector2( 190, 45 )
texture_normal = ExtResource( 5 )

[node name="ExitGame" parent="." instance=ExtResource( 3 )]
visible = false

[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/Opciones" to="." method="_on_Opciones_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer2/VBoxContainer/ExitGame" to="." method="_on_ExitGame_pressed"]
